[metadata]
name=pyaisc
version=0.1
author=MLW
description=American Institute of Steel Construction in Python
long_description=file:README.md
long_description_content_type=text/markdown
url=https://github.com/mwhit74/pyaisc
license=MIT
packages=[pyaisc]

[options]
package_dir =
    = pyaisc
packages = find:
python_requires = >=3.6

[options.packages.find]
where = pyaisc
